==> Zalmotek/renesas-RZA3UL-feather/firmware/UART/RZA3UL_Feather_Serial/src/hal_entry.cpp <==
#include "hal_data.h"
#include "SerialCompatibility.h"

FSP_CPP_HEADER
void R_BSP_WarmStart(bsp_warm_start_event_t event);
FSP_CPP_FOOTER

void delay(int dt) {
    R_BSP_SoftwareDelay(dt, BSP_DELAY_UNITS_MILLISECONDS);
}

/*******************************************************************************************************************//**
 * main() is generated by the RZA3UL Configuration editor and is used to generate threads if an RTOS is used.
 * This function is called by main() when no RTOS is used.
 **********************************************************************************************************************/
void hal_entry(void)
{
    R_IOPORT_Open(&g_ioport_ctrl, &g_bsp_pin_cfg);
    R_BSP_PinAccessEnable();

    Serial.begin(115200);
    Serial1.begin(115200);

    while (true)
    {
        //Serial.println((uint8_t*)"Heyo ^^");
        //Serial.println((uint8_t*)"Heyo ^^\n");
        //Serial.print(9); Serial.println(-1e9);
        //delay(250);
    }
}

/*******************************************************************************************************************//**
 * This function is called at various points during the startup process.  This implementation uses the event that is
 * called right before main() to set up the pins.
 *
 * @param[in]  event    Where at in the start up process the code is currently at
 **********************************************************************************************************************/
void R_BSP_WarmStart(bsp_warm_start_event_t event)
{
    if (BSP_WARM_START_RESET == event)
    {
        /* Initialize MMU. */
        R_MMU_Open (&g_mmu_ctrl, &g_mmu_cfg);
    }

    if (BSP_WARM_START_POST_C == event)
    {
        /* C runtime environment and system clocks are setup. */

        /* Configure pins. */
        R_IOPORT_Open (&g_ioport_ctrl, &g_bsp_pin_cfg);
    }
}
